--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -4,12 +4,17 @@ products: [insightconnect]
 name: rapid7_insight_agent
 title: Rapid7 Insight Agent
 description: Using the Insight Agent plugin from InsightConnect, you can quarantine, unquarantine and monitor potentially malicious IPs, addresses, hostnames, and devices across your organization
-version: 2.0.0
-supported_versions: ["Rapid7 Insight Agent 2023-06-02"]
+version: 2.0.1
+supported_versions: ["Rapid7 Insight Agent 2023-08-18"]
 vendor: rapid7
 support: rapid7
 status: []
 cloud_ready: true
+connection_version: 2
+sdk:
+  type: full
+  version: 5
+  user: nobody
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/rapid7_insight_agent
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
