--- a/plugins/ipqualityscore/plugin.spec.yaml
+++ b/plugins/ipqualityscore/plugin.spec.yaml
@@ -5,14 +5,15 @@ name: ipqualityscore
 title: IPQS Fraud and Risk Scoring
 description: IPQS Fraud and Risk Scoring plugin provides enterprise grade fraud prevention, risk analysis, and threat detection Analyze IP Addresses, Email Addresses, Phones, URLs and Domains to identify sophisticated bad actors and high risk behavior
 version: 1.0.0
+connection_version: 1
 supported_versions: ["1.0.0"]
-vendor: ipqs
-support: rapid7
+vendor: ipqualityscore
+support: community
 status: []
 tags: [ip, url, email, phone, domain]
 hub_tags:
   use_cases: [data_enrichment,threat_detection_and_response]
-  keywords: [ip_reputation, email_reputation, phone_reputation, domain_reputation]
+  keywords: [threat_intelligence]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/ipqualityscore
