ran black and refreshed

--- a/plugins/html/plugin.spec.yaml
+++ b/plugins/html/plugin.spec.yaml
@@ -8,13 +8,7 @@ support: community
 supported_versions: [2023-06-06]
 status: []
 cloud_ready: true
-description: "Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. This plugin provides the ability to convert an HTML document into a variety of formats using [pypandoc](https://pypi.python.org/pypi/pypandoc). Supported formats are: \n\n
-* DOCX \n
-* EPUB \n
-* Markdown \n
-* PDF \n
-* HTML5 \n
-* Plain Text"
+description: "Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. This plugin provides the ability to convert an HTML document into a variety of formats using [pypandoc](https://pypi.python.org/pypi/pypandoc). Supported formats are: DOCX, EPUB, Markdown, PDF, HTML5, Plain Text"
 version: 1.2.3
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/html
