--- a/plugins/duo_admin/plugin.spec.yaml
+++ b/plugins/duo_admin/plugin.spec.yaml
@@ -8,8 +8,12 @@ support: rapid7
 cloud_ready: true
 status: []
 supported_versions: ["Duo Admin API 2023-05-19"]
+sdk:
+  type: full
+  version: 5
+  user: root
 description: Duo is a trusted access solution for organizations. The Duo Admin plugin for Rapid7 InsightConnect allows users to manage and administrate their Duo organization
-version: 4.1.0
+version: 4.1.1
 connection_version: 4
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/duo_admin
