--- a/.github/workflows/unit_test_coverage.yml
+++ b/.github/workflows/unit_test_coverage.yml
@@ -39,26 +39,25 @@ jobs:
               python3 -m venv venv
               source venv/bin/activate
             
-              # Installing previously mentioned libraries
               # setuptools is version pinned here to avoid an import compatibility issue with 2to3
-              pip3 install setuptools==41.2.0 --no-cache-dir --disable-pip-version-check
-              pip3 install coverage insightconnect_plugin_runtime -r requirements.txt --no-cache-dir --disable-pip-version-check
+              echo Installing required libraries
+              pip3 install -q setuptools==41.2.0 --no-cache-dir --disable-pip-version-check
+              pip3 install -q coverage insightconnect_plugin_runtime --no-cache-dir --disable-pip-version-check
+              pip3 install -r requirements.txt --no-cache-dir --disable-pip-version-check
               
               # Exporting PYTHONPATH to plugins unit test directory so all imports are found
-              export PYTHONPATH=$(pwd)
+              export PYTHONPATH=$(pwd)/unit_test/ 
           
               # Running Coverage and collecting total coverage 
-              cd unit_test
-              coverage run -m unittest *
+              coverage run -m unittest
               output=$(python3 -m coverage report --data-file=$data_file)
               PERCENTAGE=$(echo $output | grep TOTAL | awk '{print $NF}')
-              cd ../
             fi
             
             # Writing plugin name and coverage percentage to file
             echo "$plugin, $PERCENTAGE" >> ../../coverageDir/coverage.csv
             
-            # Deactivating and deleting venv to prepare for next plugin if exists TODO
+            # Deactivating and deleting venv to prepare for next plugin if exists
             if [ -d "venv" ]; then
               deactivate
               rm -r venv
