--- a/plugins/okta/plugin.spec.yaml
+++ b/plugins/okta/plugin.spec.yaml
@@ -8,8 +8,12 @@ support: rapid7
 cloud_ready: true
 status: []
 supported_versions: ["Okta API 25-04-2023"]
+sdk:
+  type: slim
+  version: 5
+  user: nobody
 description: Secure identity management and single sign-on to any application
-version: 4.1.0
+version: 4.1.1
 connection_version: 4
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/okta
@@ -981,13 +985,13 @@ types:
       description: The operating system that the client runs on
       type: string
       required: false
-      example: Mac OS X
+      example: MAC OS X
     rawUserAgent:
       title: Raw User Agent
       description: A raw string representation of the user agent
       type: string
       required: false
-      example: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36
+      example: Mozilla/5.0 (Macintosh; Intel MAC OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36
   geolocation:
     lat:
       title: Latitude
