Freshservice - 291 - List All Agents: Fixed issue related to departament IDs field

--- a/plugins/freshservice/plugin.spec.yaml
+++ b/plugins/freshservice/plugin.spec.yaml
@@ -121,7 +121,7 @@ types:
     departmentIds:
       title: Department IDs
       description: Unique IDs of the departments associated with the agent
-      type: "[]string"
+      type: "[]integer"
       required: false
     canSeeAllTicketsFromAssociatedDepartments:
       title: Can See All Tickets from Associated Departments
